--- a/vercel.json
+++ b/vercel.json
@@ -8,10 +8,7 @@
   },
   {
     "src": "build.sh",
-    "use": "@vercel/static-build",
-    "config": {
-      "distDir": "/(.*)"
-    }
+    "use": "@vercel/static-build"
   }
 ],
 "routes": [
